<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.takeda</groupId>
    <artifactId>T-Kits</artifactId>
    <version>1.0.6</version>
    <packaging>jar</packaging>

    <name>T-Kits</name>
    <description>Kits made easier!!</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spigot.version>1.21.11-R0.1-SNAPSHOT</spigot.version>
        <acf.version>0.5.1-SNAPSHOT</acf.version>
        <lombok.version>1.18.46</lombok.version>
        <placeholderapi.version>2.11.5</placeholderapi.version>
        <anvilgui.version>1.10.12-SNAPSHOT</anvilgui.version>
        <hikaricp.version>6.3.0</hikaricp.version>
        <mysql.connector.version>8.0.33</mysql.connector.version>
        <commons.lang.version>3.14.0</commons.lang.version>
    </properties>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
             <id>aikar</id>
             <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
         <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
         <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>mvn-wesjd-net</id>
            <url>https://mvn.wesjd.net/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
             <groupId>co.aikar</groupId>
             <artifactId>acf-paper</artifactId>
             <version>${acf.version}</version>
             <scope>compile</scope> <!-- Shade ACF -->
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>${placeholderapi.version}</version>
            <scope>provided</scope>
        </dependency>

         <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.10.12-SNAPSHOT</version>
             <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikaricp.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.connector.version}</version>
             <scope>provided</scope>
        </dependency>

         <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang.version}</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                 <configuration>
                    <relocations>
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
                             <shadedPattern>com.takeda.tkits.libs.acf</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.locales</pattern>
                             <shadedPattern>com.takeda.tkits.libs.locales</shadedPattern>
                         </relocation>
                         <relocation>
                            <pattern>net.wesjd.anvilgui</pattern>
                            <shadedPattern>com.takeda.tkits.libs.anvilgui</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons.lang3</pattern>
                            <shadedPattern>com.takeda.tkits.libs.commonslang3</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                         <configuration>
                            <filters>
                                <filter>
                                    <!-- 针对导致错误的依赖项进行过滤 -->
                                    <artifact>net.wesjd:anvilgui</artifact>
                                    <excludes>
                                        <!-- 剔除 Java 21 无法解析的超前版本类文件 -->
                                        <exclude>net/wesjd/anvilgui/version/Wrapper26_R1*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <outputFile>target/${project.name}-${project.version}.jar</outputFile>
                         </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
